[package]
name = "crawfish"
version = "0.1.0"
authors = [ "Lynden Pfaff <lyndenpfaff@proton.me>" ]
edition = "2024"
description = "Clash of Clans Rust Api Wraper"
readme = "./readme.md"
license = "MIT"
keywords = [ "Clash of Clans", "coc", "API Client", "API Wrapper", "Supercell" ]
categories = [ "api-bindings", "asynchronous", "web-programming::http-client" ]
repository = "https://github.com/lyndenPfaff/crawfish-coc"

[dependencies]
reqwest = "0.13.2"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
tokio = "1.51.1"
